deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-mediation
  name: demo-mediation
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-mediation
  template:
    metadata:
      labels:
        app: demo-mediation
    spec:
      containers:
        - image: nicpym/wso2-demo:v0.0.6
          name: wso2-demo
          ports:
            - containerPort: 8290
