deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-mediation
  name: demo-mediation
spec:
  ports:
    - port: 8290
      protocol: TCP
      targetPort: 80
  selector:
    app: demo-mediation
